--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -16,6 +16,7 @@ li {
 @import "./features.scss";
 @import "./product.scss";
 @import "./developer.scss";
+@import "./BankZor.scss";
 @import "./counter.scss";
 @import "./blog.scss";
 @import "./testimonial.scss";
