--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -2,7 +2,12 @@
 .play_store_section{
     background-color: $black;
     padding: 20px 0px;
-   
+    @media screen and (max-width:767px) {
+        padding: 0px;
+        .container {
+            padding: 0;
+        }
+    }
     .play_store_container{
         background-color:#1D2020;
         border-radius:20px;
@@ -13,6 +18,10 @@
         @media screen and (max-width:992px) {
             padding: 60px 0px;
             top: 0px;
+        }
+        @media screen and (max-width:767px) {
+            padding: 30px 0px;
+            border-radius: 0;
         }
         &:after {
             content: "";
@@ -48,7 +57,9 @@
         line-height: 72px;
         text-align: left;
         color: $white;
-        @media screen and (max-width:992px) {
+        @media screen and (max-width:991px) {
+            font-size: 36px;
+            line-height: 46px;
             text-align: center;
         }
     }
@@ -59,13 +70,17 @@
         text-align: left;
         color: $white;
         margin: 0 0px 40px;
-        @media screen and (max-width:992px) {
+        @media screen and (max-width:991px) {
             text-align: center;
         }
     }
     .play_store_right{
         display: flex;
         border-bottom-right-radius: 40px;
+           
+    @media (min-width: 768px) and (max-width: 1300px) {
+        justify-content: center;
+    }
         img{
            position: relative;
            z-index: 2;
@@ -75,6 +90,10 @@
            &:last-child {
             right: 152px;
            }
+           @media screen and (max-width: 991px) {
+            height: 460px;
+            margin: 15px;
+          }
         }
       }
     .play_store_left{
@@ -84,13 +103,19 @@
         @media screen and (max-width:992px) {
             padding: 0px;
             text-align: center;
+            br{
+                display: none;
+              }
           }
-          br{
-            display: none;
-          }
+        @media screen and (max-width:767px) {
+            padding: 0px 15px;
+        }
         .store_images{
             img{
                 padding-right: 24px;
+                @media screen and (max-width: 991px) {
+                    padding: 0;
+                  }
             }
         }
         .start_now_btn{
@@ -158,43 +183,20 @@
             width: 100%;
             justify-content: start;
             align-items: center;
-            @media screen and (max-width:992px) {
+            @media screen and (max-width:991px) {
                 justify-content: center;
             }
         }
 
-            // a{
-            //     text-decoration: none;
-            //     position: relative;
-            //     span{
-            //         width: 52px;
-            //         height:52px;
-            //         background-color: white;
-            //         display: inline-block;
-            //         border-radius: 50%;
-            //         position: absolute;
-            //         right: 2px;
-            //         bottom:-17px;
-            //         display: flex;
-            //         justify-content: center;
-            //         align-items: center;
-            //     }
-            //     span{
-            //         img{
-            //             position: absolute;
-            //             left: 0px;
-            //         }
-            //     }
-            //     button{
-            //         border-radius:44px;
-            //         padding: 15px 70px 15px 20px;
-            //         opacity: 0px;
-            //         background-color:$black000;
-            //         color:$primary-color;
-            //         border: 1px solid $primary-color;
-            //         position: relative;
-            //     }
-            // }
         }
+
+        .store_images {
+            @media screen and (max-width: 991px) {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              gap: 24px;
+            }
+          }
     }
 }
