--- a/assets/css/sass/banner.scss
+++ b/assets/css/sass/banner.scss
@@ -126,11 +126,20 @@
   // }
   .hero-section-button {
     display: flex;
+    @media (min-width: 768px) and (max-width: 991px) {
+      justify-content: center;
+    }
     .section-button-one, .section-button-two {
       padding: 15px 20px;
       transition: all 0.3s ease-in;
       width:25%;
       line-height: 21px;
+      @media (min-width: 992px) and (max-width: 1400px) {
+        width: 34%;
+      }
+      @media screen and (max-width: 767px) {
+        width: 100%;
+      }
       .hero-join {
         @include hero-join;
       }
