--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -1,31 +1,48 @@
-@import './variable.scss';
+@import "./variable.scss";
+
 body {
-    background-color: $bg-color;
+  background-color: $bg-color;
+  overflow-x: hidden;
 }
+
 header {
-    padding: 0px 40px;
-    position: absolute;
-    top: 0;
-    z-index: 9999;
-    width: 100%;
-    background: #d6ca8a;
-    
-  @media (min-width: 993px) and (max-width: 1400px) {
-    padding:30px 15px;
+  padding: 0px 40px;
+  position: absolute;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  background: #d6ca8a;
+
+  @media (max-width: 991px) {
+      padding:0px;
+  }
+  
+
+  @media (min-width: 992px) and (max-width: 1300px) {
+      
+  padding:0px;
 }
 
 
-@media screen and (max-width: 992px) {
-    padding: 15px 10px;
-    background-color: $primary-color;
-
+  // Mobile View
+  @media screen and (max-width: 991px) {
     .navbar {
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      .navbar-toggler {
-        background-color: $white;
+      .btn-close {
+        background-color: transparent;
+        border: none;
+        opacity: 1;
+
+        &::before {
+          content: "\2715";
+          color: $primary-color;
+          font-size: 1.5rem;
+          display: inline-block;
+          line-height: 1;
+        }
       }
 
       .navbar-collapse {
@@ -61,133 +78,146 @@ header {
           }
         }
       }
+
+      .navbar-toggler {
+        background-color: transparent;
+        border: none;
+
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+        }
+      }
+      #offcanvasNavbar {
+        background-color: #000;
+        width: 100%;
+        .offcanvas-header {
+          border-bottom: 1px solid #ddd;
+        } 
+      }
+    }
+
+  }
+  
+  // Navbar for larger screens
+  .navbar-expand-lg {
+    .navbar-nav {
+      flex: 1;
+      justify-content: flex-end;
+      padding: 10px;
+
+      @media (min-width: 992px) and (max-width: 1300px) {
+      
+               justify-content: space-between;
+               padding: 10px 10px;
+      }
+
+      li {
+        a.nav-link {
+          font-size: 14px;
+          font-weight: 400;
+          padding: 0px 15px;
+          color: $tertiary-color;
+          position: relative;
+          transition: all 0.7s ease;
+
+          &:hover {
+            color: $white;
+          }
+
+          @media (min-width: 992px) and (max-width: 1300px) {
+            font-size: 14px;
+            padding: 10px 12px;
+          }
+        }
+      }
     }
   }
 
-    .navbar-expand-lg {
-        .navbar-nav {
-            flex: 1;
-            justify-content: center;
-            padding:10px;
+  .fz_sigin {
+    @media screen and (max-width: 991px) {
+     justify-content: center;
+  }
+    ul {
+      display: flex;
+      align-items: center;
 
-            li {
-                a.nav-link {
-                    font-size: 16px;
-                    padding: 0 20px;
-                    color:#364849;
-                    position: relative;
-                    transition: all 0.6s ease;
-                    &:hover {
-                      color: $white;
-                      }
-                    
-          @media (min-width: 993px) and (max-width: 1400px) {
+      li {
+        display: inline-block;
 
-            padding: 0 12px;
+        a {
+          color: $white;
+          font-size: 14px;
+
+          text-decoration: none;
+
+          @media (min-width: 992px) and (max-width: 1300px) {
             font-size: 14px;
- 
-   }
-                }
-            }
-        }
-    }
-    .fz_sigin {
-
-        @media screen and (max-width: 992px) {
-            width: 100%;
           }
-        ul {
-            display: flex;
-            align-items: center;
-
-            @media screen and (max-width: 992px) {
-                display: none;
-              }
-            li {
-                display: inline-block;
-                a {
-                    color: $white;
-                    font-size: 16px;
-                    text-decoration: none;
-
-                    
-          @media (min-width: 993px) and (max-width: 1400px) {
-
-            font-size: 14px;
- 
-   }
-                }
-                &:nth-child(2) {
-                    border-left: 1px solid $gray-color;
-                    padding-left: 45px;
-                    margin-left: 15px;
-                }
-                &:last-child {
-                    margin-left: 22px;
-                    a {
-                        background-color: $tertiary-color;
-                        padding: 12px 20px;
-                        border-radius: 5px;
-                        border: 1px solid $white;
-                        --border-angle: 0turn;
-                        --main-bg: conic-gradient(
-                            from var(--border-angle),
-                            #1A2C2A 0%,  
-                            #1A2C2A 100%
-                            );
-                        border: solid 1px transparent;
-                        --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
-                        background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
-                        background-position: center center;
-                        animation: bg-spin 4s linear infinite;
-                        @keyframes bg-spin {
-                            to {
-                            --border-angle: 1turn;
-                            }
-                        }
-                    }
-                    @property --border-angle {
-                        syntax: "<angle>";
-                        inherits: true;
-                        initial-value: 0turn;
-                    }
-                }
-            }
         }
+
+        &:nth-child(2) {
+          border-left: 1px solid $gray-color;
+          padding-left: 30px;
+          margin-left: 10px;
+          @media screen and (max-width: 991px) {
+           border: none;
+        }
+          
+          @media (min-width: 992px) and (max-width: 1300px) {
+            padding-left: 10px;
+          }
+        }
+
+        &:last-child {
+          margin-left: 15px;
+
+          @media (min-width: 992px) and (max-width: 1300px) {
+            margin-left: 0; // Remove margin-left
+            padding-left: 10px; // Minimal padding instead
+           }
+
+          a {
+            background-color: $tertiary-color;
+            padding: 10px 15px;
+            border-radius: 5px;
+            border: 1px solid $white;
+            --border-angle: 0turn;
+
+            --main-bg: conic-gradient(
+              from var(--border-angle),
+              #1a2c2a 0%,
+              #1a2c2a 100%
+            );
+            border: solid 1px transparent;
+
+            --gradient-border: conic-gradient(
+              from var(--border-angle),
+              transparent 50%,
+              #f7c35f,
+              #3eab90 99%,
+              transparent
+            );
+            background: var(--main-bg) padding-box,
+              var(--gradient-border) border-box, var(--main-bg) border-box;
+            background-position: center center;
+
+            animation: bg-spin 4s linear infinite;
+
+            @keyframes bg-spin {
+              to {
+                --border-angle: 1turn;
+              }
+            }
+          }
+        }
+      }
+      @media screen and (max-width: 991px) {
+          img{
+            display: none;
+          }
+      }
     }
+  }
 }
 
-
-
-
-.offcanvas-header {
-  border-bottom: 1px solid #ddd;
-}
-
-// .offcanvas-body ul.navbar-nav {
-//   margin-bottom: 1rem;
-// }
-
-.fz_sigin ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  gap: 15px;
-}
-
-.fz_sigin ul li a {
-  text-decoration: none;
-  color: #000;
-}
-
-.fz_sigin ul li img {
-  max-width: 20px;
-}
-#offcanvasNavbar{
-  background-color: #000;
-}
-.btn-close{
-   background-color: white;
-}
 
