--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -26,53 +26,58 @@
     }
     .item-1 {
       @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #18273a,
-        #003224,
-        #18273a,
-        #003224
-      );
+      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+      // background-image: linear-gradient(
+      //   0deg,
+      //   #18273a,
+      //   #003224,
+      //   #18273a,
+      //   #003224
+      // );
     }
     .item-2 {
       @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #01391f,
-        #0b3638,
-        #01391f,
-        #0b3638
-      );
+      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+      // background-image: linear-gradient(
+      //   0deg,
+      //   #01391f,
+      //   #0b3638,
+      //   #01391f,
+      //   #0b3638
+      // );
     }
     .item-3 {
       @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #013a34,
-        #2e3301,
-        #013a34,
-        #2e3301
-      );
+      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+      // background-image: linear-gradient(
+      //   0deg,
+      //   #013a34,
+      //   #2e3301,
+      //   #013a34,
+      //   #2e3301
+      // );
     }
     .item-4 {
       @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #373f01,
-        #012949,
-        #373f01,
-        #012949
-      );
+      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+      // background-image: linear-gradient(
+      //   0deg,
+      //   #373f01,
+      //   #012949,
+      //   #373f01,
+      //   #012949
+      // );
     }
     .item-5 {
       @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #18273a,
-        #003224,
-        #18273a,
-        #003224
-      );
+      background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+      // background-image: linear-gradient(
+      //   0deg,
+      //   #18273a,
+      //   #003224,
+      //   #18273a,
+      //   #003224
+      // );
     }
     .fz_sub_container {
       display: flex;
@@ -87,7 +92,7 @@
         gap: 94px;
         padding: 92px 60px;
       }
-      @media only screen and (max-width: 1280px) {
+      @media only screen and (max-width: 1200px) {
         gap: 24px;
         padding: 30px 16px 76px 16px;
         height: auto;
@@ -199,6 +204,9 @@
         //   filter: blur(212px);
         //   transform: translate3d(0, 0, 0);
         // }
+        @media screen and (max-width: 767px) {
+          margin-top: 30px;
+        }
         .fz_img {
           position: relative;
           .image_1 {
@@ -227,4 +235,48 @@
       }
     }
   }
+}
+
+
+
+.bnt-glow a {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 1px 0px;
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 0 5px 0 var(--color);
+  transition: linear 0.3s;
+  border-radius: 30px;
+  font-weight: 700;
+  width: 5px;
+  height: 300px;
+  background-color: #4dd0b1;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 10px #4dd0b1;
+}
+
+.bnt-glow a:hover {
+color: #000;
+background-color: #1dc0dd;
+border-radius: 10px;
+box-shadow: 0 0 40px 10px #1dc0dd;
+}
+
+.bnt-glow a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 0;
+  background-color: #4dd0b1;
+  transform: perspective(0.6em) rotateX(50deg) scale(1, 0.6);
+  filter: blur(0.3em);
+  opacity: 1;
+  transition: linear 0.3s;
+}
+.bnt-glow a:hover::after {
+opacity: 1;
 }
