--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -63,8 +63,19 @@
             text-align: center;
         }
     }
+    ul{
+        padding: 0;
+        margin: 10px 20px;
+        li{
+                line-height: 25px;
+                color: #dfb946;
+                font-size: 14px;
+                font-weight: 400;
+        }
+        
+    }
     p{
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 400;
         line-height: 24px;
         text-align: left;
@@ -99,7 +110,7 @@
     .play_store_left{
         position: relative;
         z-index: 2;
-        padding: 112px 70px 20px;
+        padding: 70px 70px 20px;
         @media screen and (max-width:992px) {
             padding: 0px;
             text-align: center;
