--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -17,8 +17,8 @@
   }
 }
 .footer_section .col-lg-4 .footer_logo {
-  width: 135px;
-  height: 40px;
+  width: 150px;
+  height: 50px;
 }
 @media screen and (max-width: 992px) {
   .footer_section .col-lg-4 .footer_logo {
@@ -33,9 +33,9 @@
   color: #ffffff;
   padding: 20px 0px 10px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .footer_section .col-lg-4 p {
     text-align: center;
   }
@@ -44,11 +44,11 @@
   color: #ffffff;
   text-decoration: none;
   padding-top: 10px;
-  font-size: 17px;
-  line-height: 19px;
+  font-size: 14px;
+  line-height: 22px;
   font-weight: 400;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .footer_section .col-lg-4 a {
     text-align: center;
     display: inline-block;
@@ -56,7 +56,7 @@
     padding-top: 0px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .footer_section .col-lg-4 .footer_num_email {
     padding-top: 5px;
     padding-bottom: 10px;
@@ -70,10 +70,12 @@
   font-size: 22px;
   line-height: 24px;
   font-weight: 500;
+  padding-bottom: 20px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .footer_section h5 {
     padding-top: 20px;
+    padding-bottom: 0px;
   }
 }
 .footer_section ul {
@@ -82,23 +84,29 @@
   list-style-type: none;
 }
 .footer_section li {
-  padding: 10px 0px;
+  padding: 5px 0px;
+}
+@media screen and (max-width: 991px) {
+  .footer_section li {
+    padding: 0px;
+  }
 }
 .footer_section li a {
   color: #ffffff;
-  font-size: 17px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 22px;
   text-decoration: none;
-  transition: all 0.6s ease;
+  transition: all 0.5s ease;
 }
 .footer_section li a:hover {
+  margin-left: 4px;
   color: #F7C35F;
 }
 .footer_section .copy_rights {
   display: flex;
   justify-content: space-between;
-  padding: 80px 0px 70px;
+  padding: 60px 0px;
   align-items: center;
 }
 .footer_section .copy_rights .copy_rights_1 {
@@ -106,6 +114,7 @@
 }
 .footer_section .copy_rights .copy_rights_1 p {
   margin: 0;
+  font-size: 14px;
 }
 .footer_section .copy_rights .copy_rights_1 ul li {
   display: inline-block;
@@ -123,7 +132,10 @@
 .footer_section .copy_rights .copy_rights_1.fz_social_icon a:hover {
   background: #F7C35F;
 }
-@media screen and (max-width: 992px) {
+.footer_section .copy_rights .copy_rights_1:nth-child(2) ul li a:hover, .footer_section .copy_rights .copy_rights_1:nth-child(3) ul li a:hover {
+  margin-left: 0;
+}
+@media screen and (max-width: 991px) {
   .footer_section .copy_rights {
     flex-direction: column;
     text-align: center;
@@ -132,4 +144,55 @@
   .footer_section ul {
     margin-bottom: 20px;
   }
+}
+
+/* =======scroll====top===== */
+#scroll_top {
+  display: inline-block;
+  background-color: #3EAB90;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 100px;
+  right: 30px;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#scroll_top::after {
+  display: none;
+}
+#scroll_top .black_arrow {
+  display: none;
+}
+#scroll_top:hover {
+  cursor: pointer;
+  background-color: #FFFFFF;
+  border: 2px solid #3EAB90;
+}
+#scroll_top:hover .black_arrow {
+  display: block;
+}
+#scroll_top:hover .white_arrow {
+  display: none;
+}
+#scroll_top:active {
+  background-color: #FFFFFF;
+}
+#scroll_top.show {
+  opacity: 0.3;
+  visibility: visible;
+}
+#scroll_top.show:hover {
+  opacity: 1;
+}
+#scroll_top svg {
+  width: 20px;
 }
