--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -8,6 +9,7 @@
 }
 body {
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 header {
@@ -18,23 +20,33 @@ header {
   width: 100%;
   background: #d6ca8a;
 }
-@media (min-width: 993px) and (max-width: 1400px) {
+@media (max-width: 991px) {
   header {
-    padding: 30px 15px;
+    padding: 0px;
   }
 }
-@media screen and (max-width: 992px) {
+@media (min-width: 992px) and (max-width: 1300px) {
   header {
-    padding: 15px 10px;
-    background-color: #3EAB90;
+    padding: 0px;
   }
+}
+@media screen and (max-width: 991px) {
   header .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  header .navbar .navbar-toggler {
-    background-color: #ffffff;
+  header .navbar .btn-close {
+    background-color: transparent;
+    border: none;
+    opacity: 1;
+  }
+  header .navbar .btn-close::before {
+    content: "✕";
+    color: #3EAB90;
+    font-size: 1.5rem;
+    display: inline-block;
+    line-height: 1;
   }
   header .navbar .navbar-collapse {
     position: absolute;
@@ -65,76 +77,114 @@ header {
   header .navbar .navbar-collapse ul.navbar-nav li a:hover {
     background-color: #1A2C2A;
   }
+  header .navbar .navbar-toggler {
+    background-color: transparent;
+    border: none;
+  }
+  header .navbar .navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
+  header .navbar #offcanvasNavbar {
+    background-color: #000;
+    width: 100%;
+  }
+  header .navbar #offcanvasNavbar .offcanvas-header {
+    border-bottom: 1px solid #ddd;
+  }
 }
 header .navbar-expand-lg .navbar-nav {
   flex: 1;
-  justify-content: center;
+  justify-content: flex-end;
   padding: 10px;
 }
+@media (min-width: 992px) and (max-width: 1300px) {
+  header .navbar-expand-lg .navbar-nav {
+    justify-content: space-between;
+    padding: 10px 10px;
+  }
+}
 header .navbar-expand-lg .navbar-nav li a.nav-link {
-  font-size: 16px;
-  padding: 0 20px;
-  color: #364849;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 0px 15px;
+  color: #1A2C2A;
   position: relative;
-  transition: all 0.6s ease;
+  transition: all 0.7s ease;
 }
 header .navbar-expand-lg .navbar-nav li a.nav-link:hover {
   color: #ffffff;
 }
-@media (min-width: 993px) and (max-width: 1400px) {
+@media (min-width: 992px) and (max-width: 1300px) {
   header .navbar-expand-lg .navbar-nav li a.nav-link {
-    padding: 0 12px;
     font-size: 14px;
+    padding: 10px 12px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   header .fz_sigin {
-    width: 100%;
+    justify-content: center;
   }
 }
 header .fz_sigin ul {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 992px) {
-  header .fz_sigin ul {
-    display: none;
-  }
-}
 header .fz_sigin ul li {
   display: inline-block;
 }
 header .fz_sigin ul li a {
   color: #ffffff;
-  font-size: 16px;
+  font-size: 14px;
   text-decoration: none;
 }
-@media (min-width: 993px) and (max-width: 1400px) {
+@media (min-width: 992px) and (max-width: 1300px) {
   header .fz_sigin ul li a {
     font-size: 14px;
   }
 }
 header .fz_sigin ul li:nth-child(2) {
   border-left: 1px solid #979797;
-  padding-left: 45px;
-  margin-left: 15px;
+  padding-left: 30px;
+  margin-left: 10px;
+}
+@media screen and (max-width: 991px) {
+  header .fz_sigin ul li:nth-child(2) {
+    border: none;
+  }
+}
+@media (min-width: 992px) and (max-width: 1300px) {
+  header .fz_sigin ul li:nth-child(2) {
+    padding-left: 10px;
+  }
 }
 header .fz_sigin ul li:last-child {
-  margin-left: 22px;
+  margin-left: 15px;
+}
+@media (min-width: 992px) and (max-width: 1300px) {
+  header .fz_sigin ul li:last-child {
+    margin-left: 0;
+    padding-left: 10px;
+  }
 }
 header .fz_sigin ul li:last-child a {
   background-color: #1A2C2A;
-  padding: 12px 20px;
+  padding: 10px 15px;
   border-radius: 5px;
   border: 1px solid #ffffff;
   --border-angle: 0turn;
   --main-bg: conic-gradient(
-      from var(--border-angle),
-      #1A2C2A 0%,
-      #1A2C2A 100%
-      );
+    from var(--border-angle),
+    #1a2c2a 0%,
+    #1a2c2a 100%
+  );
   border: solid 1px transparent;
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+  --gradient-border: conic-gradient(
+    from var(--border-angle),
+    transparent 50%,
+    #f7c35f,
+    #3eab90 99%,
+    transparent
+  );
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 4s linear infinite;
@@ -144,39 +194,8 @@ header .fz_sigin ul li:last-child a {
     --border-angle: 1turn;
   }
 }
-@property --border-angle {
-  header .fz_sigin ul li:last-child {
-    syntax: "<angle>";
-    inherits: true;
-    initial-value: 0turn;
+@media screen and (max-width: 991px) {
+  header .fz_sigin ul img {
+    display: none;
   }
-}
-
-.offcanvas-header {
-  border-bottom: 1px solid #ddd;
-}
-
-.fz_sigin ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  gap: 15px;
-}
-
-.fz_sigin ul li a {
-  text-decoration: none;
-  color: #000;
-}
-
-.fz_sigin ul li img {
-  max-width: 20px;
-}
-
-#offcanvasNavbar {
-  background-color: #000;
-}
-
-.btn-close {
-  background-color: white;
 }
