--- a/assets/css/playstore.css
+++ b/assets/css/playstore.css
@@ -10,6 +10,14 @@
   background-color: #000000;
   padding: 20px 0px;
 }
+@media screen and (max-width: 767px) {
+  .play_store_section {
+    padding: 0px;
+  }
+  .play_store_section .container {
+    padding: 0;
+  }
+}
 .play_store_section .play_store_container {
   background-color: #1D2020;
   border-radius: 20px;
@@ -22,6 +30,12 @@
   .play_store_section .play_store_container {
     padding: 60px 0px;
     top: 0px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .play_store_section .play_store_container {
+    padding: 30px 0px;
+    border-radius: 0;
   }
 }
 .play_store_section .play_store_container:after {
@@ -58,20 +72,32 @@
   text-align: left;
   color: #ffffff;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .play_store_section h2 {
+    font-size: 36px;
+    line-height: 46px;
     text-align: center;
   }
 }
+.play_store_section ul {
+  padding: 0;
+  margin: 10px 20px 20px;
+}
+.play_store_section ul li {
+  line-height: 25px;
+  color: #dfb946;
+  font-size: 14px;
+  font-weight: 400;
+}
 .play_store_section p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 24px;
   text-align: left;
   color: #ffffff;
   margin: 0 0px 40px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .play_store_section p {
     text-align: center;
   }
@@ -79,6 +105,11 @@
 .play_store_section .play_store_right {
   display: flex;
   border-bottom-right-radius: 40px;
+}
+@media (min-width: 768px) and (max-width: 1300px) {
+  .play_store_section .play_store_right {
+    justify-content: center;
+  }
 }
 .play_store_section .play_store_right img {
   position: relative;
@@ -90,22 +121,38 @@
 .play_store_section .play_store_right img:last-child {
   right: 152px;
 }
+@media screen and (max-width: 991px) {
+  .play_store_section .play_store_right img {
+    height: 460px;
+    margin: 15px;
+  }
+}
 .play_store_section .play_store_left {
   position: relative;
   z-index: 2;
-  padding: 112px 70px 20px;
+  padding: 70px 70px 20px;
 }
 @media screen and (max-width: 992px) {
   .play_store_section .play_store_left {
     padding: 0px;
     text-align: center;
   }
+  .play_store_section .play_store_left br {
+    display: none;
+  }
 }
-.play_store_section .play_store_left br {
-  display: none;
+@media screen and (max-width: 767px) {
+  .play_store_section .play_store_left {
+    padding: 0px 15px;
+  }
 }
 .play_store_section .play_store_left .store_images img {
   padding-right: 24px;
+}
+@media screen and (max-width: 991px) {
+  .play_store_section .play_store_left .store_images img {
+    padding: 0;
+  }
 }
 .play_store_section .play_store_left .start_now_btn {
   margin-top: 50px;
@@ -173,8 +220,16 @@
   justify-content: start;
   align-items: center;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .play_store_section .play_store_left .start_now_btn .hover-box {
     justify-content: center;
+  }
+}
+@media screen and (max-width: 991px) {
+  .play_store_section .play_store_left .store_images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
   }
 }
