--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -33,27 +33,27 @@
 .fz_product_sec .fz_container .item-1 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background-image: linear-gradient(0deg, #18273a, #003224, #18273a, #003224);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
 }
 .fz_product_sec .fz_container .item-2 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background-image: linear-gradient(0deg, #01391f, #0b3638, #01391f, #0b3638);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
 }
 .fz_product_sec .fz_container .item-3 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background-image: linear-gradient(0deg, #013a34, #2e3301, #013a34, #2e3301);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
 }
 .fz_product_sec .fz_container .item-4 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background-image: linear-gradient(0deg, #373f01, #012949, #373f01, #012949);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
 }
 .fz_product_sec .fz_container .item-5 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background-image: linear-gradient(0deg, #18273a, #003224, #18273a, #003224);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
 }
 .fz_product_sec .fz_container .fz_sub_container {
   display: flex;
@@ -73,7 +73,7 @@
     padding: 92px 60px;
   }
 }
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1200px) {
   .fz_product_sec .fz_container .fz_sub_container {
     gap: 24px;
     padding: 30px 16px 76px 16px;
@@ -182,6 +182,11 @@
 .fz_product_sec .fz_container .fz_sub_container .fz_img-sec {
   position: relative;
 }
+@media screen and (max-width: 767px) {
+  .fz_product_sec .fz_container .fz_sub_container .fz_img-sec {
+    margin-top: 30px;
+  }
+}
 .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img {
   position: relative;
 }
@@ -206,4 +211,47 @@
     width: 100%;
     margin-top: 10px;
   }
+}
+
+.bnt-glow a {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 1px 0px;
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 0 5px 0 var(--color);
+  transition: linear 0.3s;
+  border-radius: 30px;
+  font-weight: 700;
+  width: 5px;
+  height: 300px;
+  background-color: #4dd0b1;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 10px #4dd0b1;
+}
+
+.bnt-glow a:hover {
+  color: #000;
+  background-color: #1dc0dd;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 10px #1dc0dd;
+}
+
+.bnt-glow a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 0;
+  background-color: #4dd0b1;
+  transform: perspective(0.6em) rotateX(50deg) scale(1, 0.6);
+  filter: blur(0.3em);
+  opacity: 1;
+  transition: linear 0.3s;
+}
+
+.bnt-glow a:hover::after {
+  opacity: 1;
 }
