--- a/assets/css/product_intro.css
+++ b/assets/css/product_intro.css
@@ -13,8 +13,8 @@
   justify-content: center;
   align-items: center;
   background: #f0f0f0;
-  overflow: hidden;
   height: 100vh;
+  z-index: -1;
 }
 @media screen and (max-width: 768px) {
   .features_posibilityies {
