--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -65,7 +65,7 @@
     }
     ul{
         padding: 0;
-        margin: 10px 20px;
+        margin: 10px 20px 20px;
         li{
                 line-height: 25px;
                 color: #dfb946;
